src/static/styles/base.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

:root {
    --main-color: #261e48;
    --accent-color: #facf53;
    --background: #70e2ff;
    --btn-color: #7070e5;
    --btn-hover: #5d5dbf;
    --alt1: #2e2456;
    --alt2: #42347c;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Roboto';
}

/* Custom Scrollbar */

/* ===== Scrollbar CSS ===== */

/* Firefox */
* {
  scrollbar-width: thin;
  scrollbar-color: #99999955 #00000011;
}

/* Chrome, Edge, and Safari */
*::-webkit-scrollbar {
  width: 8px;
}

*::-webkit-scrollbar-track {
  background: #00000011;
}

*::-webkit-scrollbar-thumb {
  background-color: #99999955;
  border-radius: 8px;
  border: 1px solid #00000055;
}

/* End Custom Scrollbar */

.background {
    z-index: -1;
    position: fixed;
    aspect-ratio: attr(width) / attr(height);
    min-width: 100vw;
    min-height: 100vh;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%) scale(1.1);
    background-color: #8d85c1;
    filter: brightness(60%) blur(6px);
}

html, body {
    height: 100%;
    min-height: 100vh;
    max-width: 100vw;
}

h1 {
    font-size: 2rem;
}

h2 {
    font-size: 1.75rem;
}

h3 {
    font-size: 1.5rem;
}

h4 {
    font-size: 1.25rem;
}

.content {
    display: flex;
    flex-direction: row;
    min-height: 100%;
}

.page {
    width: 100%;
    height: 100vh;
    overflow-y: scroll;
    overflow-x: hidden;
}

.divider {
    width: 100%;
    height: 2px;
    background-color: #000000;
}

.vdivider {
    width: 2px;
    background-color: #000000;
}

.mt-5 {
    margin-top: 5px;
}

a {
    text-decoration: none;
    color: var(--main-color);
}

a:hover {
    text-decoration: underline;
}

.link {
    color: var(--accent-color);
    text-decoration: none;
    cursor: pointer;
}

form {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
}

input {
    padding: 0.5rem;
    border-radius: 5px;
    border: 2px solid var(--accent-color);
    background-color: var(--alt1);
    color: var(--accent-color);
    width: 100%;
}

textarea {
    padding: 0.5rem;
    margin: 0.5rem 0;
    border-radius: 5px;
    border: 2px solid var(--accent-color);
    background-color: var(--alt1);
    color: var(--accent-color);
    width: 100%;
    resize: none;
    height: 32vh;
}

select {
    padding: 0.5rem;
    margin: 0.5rem 0;
    border: 2px solid var(--accent-color);
    border-radius: 5px;
    background-color: var(--alt1);
    color: var(--accent-color);
}

button {
    box-sizing: border-box;
    outline: none;
    border: none;
    background-color: var(--btn-color);
    color: #fff;
    cursor: pointer;
    margin-inline: 0;
    border-radius: 10px;
    padding: .5rem 1rem;
    font-size: 1rem;
    width: fit-content;
    transition: .1s ease-in-out;
}

button:hover {
    background-color: var(--btn-hover);
}

button:active {
    transform: scale(0.95);
}

.delete {
    background-color: #dc3545;
}

.delete:hover {
    background-color: #c82333;
}

.popup {
    position: fixed;
    top: -16%;
    left: 40%;
    width: 20%;
    height: 15%;
    background-color: rgba(121, 121, 121, 0.75);
    border: 3px solid rgb(93, 93, 93);
    border-radius: 1vw;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    z-index: 1000;
    animation: pop 6s ease;
}

.popuptext {
    color: var(--main-color);
    text-align: center;
    justify-content: center;
    align-items: center;
    font-size: 1vw;
}

@keyframes pop {
    0%   {top: -50%;}
    10% {top: 1.5%;}
    15% {top: 0.5%;}
    20% {top: 1%;}
    80% {top: 1%; opacity: 1;}
    100% {display: none; top: 1%; opacity: 0;}
}

.fsuccess {
    background-color: rgba(0, 121, 24, 0.75);
    border: 3px solid rgb(0, 93, 19);
}

.ferror {
    background-color: rgba(121, 0, 0, 0.75);
    border: 3px solid rgb(93, 0, 0);
}

.ferror > span {
    color: var(--accent-color);
}

.finfo {
    background-color: rgba(0, 0, 121, 0.75);
    border: 3px solid rgb(0, 0, 93);
}

.finfo > span {
    color: var(--accent-color);
}

.title {
    text-align: center;
    color: var(--accent-color);
    font-size: 2.5rem;
}

.remove-tag, .add-tag {
    display: inline-flex;
    cursor: pointer;
    align-items: center;
    gap: .25rem;
    border-radius: 99999px;
    padding: .25rem .5rem;
    font-size: .875rem;
    font-weight: 600;
    line-height: 1;
    overflow: visible;
    width: auto;
}

.remove-tag:hover, .add-tag:hover {
    text-decoration: underline;
}

.remove-tag {
    background-color: #dc3545;
}

.add-tag {
    background-color: #28a745;
}

.remove-tag:hover {
    background-color: #c82333;
}

.add-tag:hover {
    background-color: #218838;
}

.tagform > button {
    margin-bottom: 5px;
}

.display-tag {
    display: inline-flex;
    cursor: pointer;
    align-items: center;
    gap: .25rem;
    border-radius: 99999px;
    padding: .25rem .5rem;
    font-size: .875rem;
    font-weight: 600;
    line-height: 1;
    overflow: visible;
    width: auto;
    background-color: #4f4f4f;
    color: #fff;
}

.modal {
    display: none;
    opacity: 0;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgba(0,0,0,0.4);
    backdrop-filter: blur(5px);
    justify-content: center;
    align-items: center;
    transition: 0.2s ease-in-out;
}

.modal-content {
    display: flex;
    flex-direction: column;
    background-color: var(--main-color);
    color: var(--accent-color);
    padding: 2.5rem;
    border-radius: 10px;
    gap: 0.5rem;
    width: 80%;
    max-height: 95vh;
}

.close {
    color: #aaa;
    float: right;
    font-size: 1rem;
    cursor: pointer;
    text-decoration: none;
    align-self: flex-end;
    margin-bottom: -1.75rem;
    z-index: 1;
}

.close:hover,
.close:focus {
    color: white;
}

.feedb {
    word-wrap: break-word;
    overflow-wrap: break-word;
    padding: 0.5rem;
    border: 2px solid var(--accent-color);
    border-radius: 5px;
    background-color: var(--alt1);
    max-height: 40vh;
}

.iconified-input {
    display: flex;
    align-items: center;
    padding: 0.5rem;
    gap: .5rem;
    width: 100%;
    border-radius: 5px;
    border: 2px solid var(--accent-color);
    background-color: var(--alt1);
    color: #fff;
}

.iconified-input:focus-within {
    outline: auto 5px;
}

.iconified-input > input {
    margin: 0;
    padding: 0;
    border: 0;
    border-radius: 0;
    width: 100%;
    background-color: transparent;
    color: #fff;
}

.iconified-input::placeholder {
    color: #fff;
}

.iconified-input > input:focus {
    outline: none;
}

.section {
    display: flex;
    flex-direction: column;
    padding: 1rem;
    background-color: var(--main-color);
    border-radius: 20px;
    color: var(--accent-color);
}

.section-separator {
    display: flex;
    padding: 1rem;
    gap: 1rem;
    height: 100%;
}

.section-stacker {
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.tablewrap {
    position: relative;
    width:100%;
    z-index: 1;
    overflow: auto;
    max-height: 100%;
}

.listsection th {
    border-right: 1px solid #4f4f4f;
    border-bottom: 1px solid #4f4f4f;
    align-items: center;
    text-align: center;
    position: -webkit-sticky;
    position: sticky;
    top: 0;
    background-color: var(--main-color);
}

.listsection td {
    border-right: 1px solid #4f4f4f;
    align-items: center;
    text-align: center;
    padding: 0.5rem;
    min-width: fit-content;
    white-space: nowrap;
}

.listsection tr > td:last-child, .listsection tr > th:last-child {
    border-right: none;
}

.listsection tbody > tr:nth-child(odd) {
    background-color: var(--alt1);
}

.listsection tbody {
    overflow: auto;
    height: 1rem;
}

.listsection table {
    width: 100%;
    border-collapse: separate;
    border-spacing: 0;
    border-radius: 5px;
}

.listsection {
    display: flex;
    flex-direction: column;
    padding: 1rem;
    background-color: var(--main-color);
    border-radius: 5px;
    flex-grow: 1;
    min-height: 12rem;
}

.editpass {
    display: flex;
    flex-direction: row;
    gap: 1rem;
    padding-bottom: .5rem;
}

.editpass > .iconified-input {
    flex-basis: min-content;
    flex-grow: 2;
    flex-shrink: 1;
}

.showpass {
    cursor: pointer;
}

.taglist {
    margin: .25rem 0;
    gap: 5px;
    display: flex;
    flex-wrap: wrap;
}

.eventel {
    text-decoration: none;
    list-style: none;
}
.eventel > a {
    color: var(--accent-color);
}

.settings {
    width: 30vw;
    margin-inline: auto;
}

.settingsform {
    display: flex;
    flex-direction: column;
    gap: .75rem;
}

/* Markdown part */

.markdown > * {
    margin: 0;
    padding: 0;
    text-align: start;
}

.markdown {
    display: flex;
    flex-direction: column;
    color: var(--accent-color);
    font-size: 1rem;
    overflow: scroll;
    gap: 0.75rem;
}

.markdown h1 {
    font-size: 2rem;
    color: var(--accent-color);
}

.markdown h2 {
    font-size: 1.5rem;
    color: var(--accent-color);
}

.markdown h3 {
    font-size: 1.25rem;
    color: var(--accent-color);
}

.markdown h4 {
    font-size: 1.125rem;
    color: var(--accent-color);
}

.markdown ul {
    list-style: disc;
    margin-left: 1rem;
}

.markdown pre {
    background-color: var(--alt2);
    color: var(--accent-color);
    padding: 1rem;
    border-radius: 5px;
    border-left: 5px solid var(--accent-color);
}

.markdown pre code {
    overflow-x: scroll;
}

.markdown code, .markdown code * {
    font-weight: 900;
}

.markdown p {
    color:  var(--accent-color);
}

.markdown a {
    color: var(--btn-color);
}

.markdown a:hover {
    color: var(--btn-hover);
}

.markdown img {
    max-width: 100%;
    max-height: 25vw;
    height: auto;
}

/* End markdown */

.dropzone {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: none;
    justify-content: center;
    align-items: center;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 1000;
    pointer-events: none;
    transition: 0.25s;
    backdrop-filter: blur(5px);
    opacity: 0;
}

.importVisual, .chosedata {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    padding: 4rem;
    backdrop-filter: blur(16px);
    border-radius: 20px;
    color: var(--accent-color);
    font-size: 2rem;
    text-align: center;
    justify-content: center;
    align-items: center;
    cursor: pointer;
}

.importVisual {
    background-color: #00000055;
}

.chosedata {
    height: 100%;
}

.importVisual svg, .chosedata svg {
    font-size: 6rem;
}

.dropzone.visible {
    display: flex;
    pointer-events: auto; /* Becomes interactive when visible */
}

.tag {
	display: inline-flex;
	align-items: center;
	gap: .25rem;
	border-radius: 99999px;
	padding: .25rem .5rem;
	font-size: .875rem;
	font-weight: 600;
	line-height: 1;
	overflow: visible;
	width: auto;
    background-color: #4f4f4f;
    color: #fff;
    white-space: nowrap;
}

.dashprofile {
	display: flex;
	flex-direction: column;
	gap: 5px;
    height: 100%;
}

.profile {
    width: 20vw;
}

.actionbtn {
    display: flex;
    flex-direction: row;
    gap: 0.5rem;
    flex-wrap: nowrap;
    justify-content: center;
}

.disabled {
    cursor: not-allowed;
    opacity: 0.5;
}

.disabled:hover {
    background-color: var(--btn-color);
}

.disabled:active {
    transform: scale(1);
}

